测试垃圾回收